syntax = "proto3";
package main;
option go_package = ".";
import "proto/types.proto";
import "google/protobuf/timestamp.proto";


message CarParkRequest {

}

message CarParkResponse {
  repeated Transport transports = 1;
}

message DriversByTransportRequest {
  int32 transportId = 1;
}

message DriversByTransportResponse {
  repeated Driver drivers = 1;
}

message DriversInfoRequest {

}

message DriversInfoResponse {
  repeated Driver drivers = 1;
}

message RoutesInfoRequest {

}

message PassengerRoutesInfoResponse {
  repeated Route routes = 1;
}

message TransportMileageRequest {
  oneof requestType {
    int32 transportId = 1;
    string transportType = 2;
  }

  google.protobuf.Timestamp dateFrom = 3;
  google.protobuf.Timestamp dateTo = 4;
}

message TransportMileageResponse {

  message TransportMileage {
    Transport transport = 1;
    int32 mileage = 3;
  }

  repeated TransportMileage transportMileage = 1;
}

message TransportRepairCostsRequest {

  oneof requestType {
    int32 transportId = 1;
    string transportType = 2;
    string transportBrand = 3;
  }

  google.protobuf.Timestamp dateFrom = 4;
  google.protobuf.Timestamp dateTo = 5;
}

message TransportRepairCostsResponse {

  message TransportRepairCosts {
    Transport transport = 1;
    int32 repairCosts = 3;
  }

  repeated TransportRepairCosts transportRepairCosts = 1;
}

message TransportTypeRequest {

}

message TransportTypeResponse {
  repeated string transportTypes = 1;
}

message GetGarageInfoRequest {
  oneof requestType {
    int32 transportId = 1;
    string transportType = 2;
  }

  repeated Transport transports = 3;

}

message CargoTransportationInfoRequest {
  google.protobuf.Timestamp dateFrom = 1;
  google.protobuf.Timestamp dateTo = 2;
  int32 transportId = 3;
}

message CargoTransportationInfoResponse {
  repeated CargoTransportationInfo cargoTransportationInfo = 1;
}

message DetailRepairInfoRequest {
  oneof requestType {
    int32 transportId = 1;
    string transportType = 2;
    string transportBrand = 3;
  }

  google.protobuf.Timestamp dateFrom = 4;
  google.protobuf.Timestamp dateTo = 5;
}

message DetailRepairInfoResponse {
  repeated TransportUnit transportUnits = 1;
}

message TransportTransactionInfoRequest {
  google.protobuf.Timestamp dateFrom = 1;
  google.protobuf.Timestamp dateTo = 2;
}

message TransportTransactionInfoResponse {

  message TransactionInfo {
    int32 id = 1;
    string type = 2;
    float cost = 3;
    google.protobuf.Timestamp date = 4;
    string description = 5;
  }

  repeated  TransactionInfo transactions = 1;
}

message PersonnelServiceWorksRequest {
  int32 personnel_service_id = 1;
  string personnel_service_type = 2;

  message DateRange {
    google.protobuf.Timestamp dateFrom = 3;
    google.protobuf.Timestamp dateTo = 4;
  }

  oneof requestType {
    DateRange dateRange = 5;
    int32 transportId = 6;
  }

}

message PersonnelServiceWorksResponse {
  repeated RepairWorkInfo repairWorks = 1;
}

service AutoEnterpriseInfoService {
  rpc GetTransportTypes(TransportTypeRequest) returns (TransportTypeResponse);
  rpc GetCarPark(CarParkRequest) returns (CarParkResponse);
  rpc GetDriversByTransport(DriversByTransportRequest) returns (DriversByTransportResponse);
  rpc GetDriversInfo(DriversInfoRequest) returns (DriversInfoResponse);
  rpc GetPassengerRoutesInfo(RoutesInfoRequest) returns (PassengerRoutesInfoResponse);
  rpc GetTransportMileage(TransportMileageRequest) returns (TransportMileageResponse);
  rpc GetTransportRepairCosts(TransportRepairCostsRequest) returns (TransportRepairCostsResponse);
  rpc GetGarageInfo(GetGarageInfoRequest) returns (TransportRepairCostsResponse);
  rpc GetCargoTransportationInfo(CargoTransportationInfoRequest) returns (CargoTransportationInfoResponse);
  rpc GetDetailRepairInfo(DetailRepairInfoRequest) returns (DetailRepairInfoResponse);
  rpc GetTransportTransactionInfo(TransportTransactionInfoRequest) returns (TransportTransactionInfoResponse);
  rpc GetPersonnelServiceWorks(PersonnelServiceWorksRequest) returns (PersonnelServiceWorksResponse);
}
